# distributed-lib

./: Cargo.toml  flake.nix
crates/raft-client/: Cargo.toml  build.rs
crates/raft-client/src/: lib.rs
crates/raft-core/: Cargo.toml
crates/raft-core/src/: channels.rs  cluster.rs  constants.rs  context.rs  election.rs  events.rs  lib.rs  runner.rs  state_machine.rs  states.rs  utils.rs
crates/raft-core/src/channels/: events.rs
crates/raft-core/src/cluster/: member.rs
crates/raft-core/src/state_machine/: candidate.rs  follower.rs  leader.rs  run.rs  transitions.rs
crates/raft-core/src/utils/: state_transition.rs
crates/raft-models/: Cargo.toml  build.rs
crates/raft-models/src/: lib.rs
crates/raft-server/: Cargo.toml  build.rs
crates/raft-server/src/: candidate.rs  cluster_config.rs  election.rs  follower.rs  leader.rs  lib.rs  main.rs  raft_context.rs  service.rs  utils.rs
proto/raft/common/: common.proto
proto/raft/rpc-models/: rpc-models.proto
proto/raft/service/: service.proto
proto/raft/state/: state.proto
