[workspace]
resolver = "3"
members = ["crates/raft-models", "crates/raft-server", "crates/raft-client", "crates/raft-core"]

[workspace.dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
protox = "0.9"
tokio = { version = "1.52.3", features = ["full"] }
either = "1.16.0"
