[package]
name = "raft-server"
version = "0.1.0"
edition = "2024"
authors = ["ShubhranshuSanjeev"]
license = ""

[dependencies]
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
dotenv = "0.15.0"
rand = "0.10.1"
once_cell = "1.21.4"
raft-models = { path = "../raft-models" }
raft-client = { path = "../raft-client" }

[build-dependencies]
tonic-prost-build = { workspace = true }
protox = { workspace = true }
